driver: 新增执行 SQL 指令对象解析失败降级操作